--- a/简历.md
+++ b/简历.md
@@ -4,14 +4,14 @@
 - **Email**：18069898338@163.com
 - **微信号**：Benjamin-Fy
 
-<!-- # 个人信息
+# 个人信息
 
 - 方洋/男/1993
 - **教育**:大专/武汉软件工程职业学院（2012～2015）
 - **工作年限**：6年
 - **期望职位**：项目主管、Java资深后端开发
 - **期望薪资**：30k~35k
-- **期望城市**：杭州 -->
+- **期望城市**：杭州
 
 # 技能清单
 
