--- a/架构图.md
+++ b/架构图.md
@@ -1,4 +1,53 @@
-# 系统架构图
+# 技术评审相关图工具
+
+## 用例图示例
+
+> [!note]
+>
+> 由VSCode、plantuml生成
+
+``` plantuml
+@startuml 积分用例图
+
+title <font color=blue>后台系统积分用例图[by:方洋]
+
+left to right direction
+
+actor : 后端系统: as otherLxTaBackendService #pink;line:red;line.bold;
+
+note top of otherLxTaBackendService
+    通过rpc方法调用
+end note
+
+usecase 修改用户积分 as changeUserPoint
+usecase 查询用户总积分 as getUserTotalPoint
+usecase 登录校验 as getRestContextByAccessToken
+
+otherLxTaBackendService --> getRestContextByAccessToken:获取用户的登录态[RPC]
+otherLxTaBackendService --> changeUserPoint:增加或者扣减积分[RPC]
+otherLxTaBackendService --> getUserTotalPoint: 查询用户当前总积分[RPC]
+@enduml
+```
+
+![架构图](https://fy-image.oss-cn-beijing.aliyuncs.com/%E7%A7%AF%E5%88%86%E7%94%A8%E4%BE%8B%E5%9B%BE.png)
+
+## 时序图示例
+
+> [!note]
+>
+> 由VSCode、plantuml生成
+
+![架构图](https://fy-image.oss-cn-beijing.aliyuncs.com/%E7%94%A8%E6%88%B7%E7%A7%AF%E5%88%86.png)
+
+## 活动图示例
+
+> [!note]
+>
+> 由VSCode、plantuml生成
+
+![架构图](https://fy-image.oss-cn-beijing.aliyuncs.com/%E8%B4%A2%E5%8A%A1%E4%BB%98%E6%81%AF%E5%92%8C%E7%BB%93%E6%AC%BE.png)
+
+## 系统架构图
 
 > [!note]
 >
