--- a/架构图.md
+++ b/架构图.md
@@ -1,10 +1,11 @@
-# 技术评审相关图工具
+# 技术评审涉及相关图
 
 ## 用例图示例
 
 > [!note]
 >
 > 由VSCode、plantuml生成
+> <https://plantuml.com/zh/>
 
 ![架构图](https://fy-image.oss-cn-beijing.aliyuncs.com/%E7%A7%AF%E5%88%86%E7%94%A8%E4%BE%8B%E5%9B%BE.png)
 
