--- a/架构图.md
+++ b/架构图.md
@@ -4,7 +4,8 @@
 
 > [!note]
 >
-> 由VSCode、plantuml生成
+> 由VSCode编辑器、plantuml语法生成
+> 
 > <https://plantuml.com/zh/>
 
 ![架构图](https://fy-image.oss-cn-beijing.aliyuncs.com/%E7%A7%AF%E5%88%86%E7%94%A8%E4%BE%8B%E5%9B%BE.png)
